adds wheelchair user as an incident subject
